# stockflow

./: .env.example  .gitignore  README.md  StackFlow - Order Fulfillment System API.yaml  main.py  pyproject.toml
backend_core/: celery.py  postman.md  settings.py  urls.py
orders/: models.py  serializers.py  tasks.py  views.py
orders/migrations/: 0001_initial.py
products/: models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py
